--- a/Midterm1/Midterm1/Base.lproj/LaunchScreen.storyboard
+++ b/Midterm1/Midterm1/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,28 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grocery" translatesAutoresizingMaskIntoConstraints="NO" id="KX6-ca-oSN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's Go Shopping!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUB-E1-59o">
+                                <rect key="frame" x="28" y="128" width="536" height="63"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KX6-ca-oSN" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="1Zi-8n-qTU"/>
+                            <constraint firstItem="RUB-E1-59o" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="5wf-Is-4Qo"/>
+                            <constraint firstAttribute="trailing" secondItem="KX6-ca-oSN" secondAttribute="trailing" id="F8r-xJ-ZZw"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="RUB-E1-59o" secondAttribute="bottom" constant="409" id="HhD-pb-Wsx"/>
+                            <constraint firstItem="KX6-ca-oSN" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="T0a-lp-pPG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RUB-E1-59o" secondAttribute="trailing" constant="16" id="XxM-DN-YQc"/>
+                            <constraint firstItem="RUB-E1-59o" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="108" id="qbV-cW-MRa"/>
+                            <constraint firstItem="KX6-ca-oSN" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="x6i-xM-jWB"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +46,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="grocery" width="303" height="166"/>
+    </resources>
 </document>
