--- a/ProjectOne/ProjectOne/Main.storyboard
+++ b/ProjectOne/ProjectOne/Main.storyboard
@@ -173,7 +173,23 @@
                     <view key="view" contentMode="scaleToFill" id="ZjX-pV-VnD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Xs-zK-mTu">
+                                <rect key="frame" x="218" y="280" width="164" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="164" id="qLM-dZ-wAI"/>
+                                </constraints>
+                                <state key="normal" title="Find Adoptable Pets"/>
+                                <connections>
+                                    <segue destination="49e-Tb-3d3" kind="show" id="bXm-b4-AiT"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Xs-zK-mTu" firstAttribute="centerX" secondItem="ZjX-pV-VnD" secondAttribute="centerX" id="8Qk-Pm-nAV"/>
+                            <constraint firstItem="5Xs-zK-mTu" firstAttribute="top" secondItem="YMd-h3-Axe" secondAttribute="bottom" constant="260" id="uBc-ld-9EM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bbT-nQ-LgY" userLabel="First Responder" sceneMemberID="firstResponder"/>
