added app icons and launch screen

--- a/Lab6New/Lab6New/Base.lproj/LaunchScreen.storyboard
+++ b/Lab6New/Lab6New/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="med" translatesAutoresizingMaskIntoConstraints="NO" id="Rj7-1Z-YtU">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Rj7-1Z-YtU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="8Nh-N5-hH4"/>
+                            <constraint firstItem="Rj7-1Z-YtU" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="gDx-27-7Bd"/>
+                            <constraint firstItem="Rj7-1Z-YtU" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="iM9-w0-bN1"/>
+                            <constraint firstAttribute="trailing" secondItem="Rj7-1Z-YtU" secondAttribute="trailing" id="vPu-N2-e8S"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="med" width="425" height="282"/>
+    </resources>
 </document>
