--- a/Lab6New/Lab6New/Base.lproj/Main.storyboard
+++ b/Lab6New/Lab6New/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Medication" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znd-HL-HjS">
-                                <rect key="frame" x="258" y="136" width="85" height="21"/>
+                                <rect key="frame" x="258" y="135" width="85" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -86,8 +86,8 @@
                                     <!--2016-03-18 03:29:21 +0000-->
                                 </date>
                             </datePicker>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZaD-Bb-Y3a">
-                                <rect key="frame" x="184" y="189" width="233" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZaD-Bb-Y3a">
+                                <rect key="frame" x="110" y="186" width="233" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="233" id="mxo-O7-35m"/>
                                 </constraints>
@@ -98,11 +98,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Znd-HL-HjS" firstAttribute="centerX" secondItem="xhT-3Y-mLM" secondAttribute="centerX" id="DRJ-wJ-jhf"/>
-                            <constraint firstItem="Znd-HL-HjS" firstAttribute="top" secondItem="Kdh-FA-mPa" secondAttribute="bottom" constant="72" id="Rjq-eO-Dbo"/>
+                            <constraint firstItem="Znd-HL-HjS" firstAttribute="top" secondItem="Kdh-FA-mPa" secondAttribute="bottom" constant="71" id="Rjq-eO-Dbo"/>
                             <constraint firstItem="YRE-M2-Nbm" firstAttribute="centerX" secondItem="yuc-t5-Pve" secondAttribute="centerX" id="YSv-cY-EvB"/>
-                            <constraint firstItem="YRE-M2-Nbm" firstAttribute="top" secondItem="ZaD-Bb-Y3a" secondAttribute="bottom" constant="32" id="dgy-uy-Rfs"/>
-                            <constraint firstItem="ZaD-Bb-Y3a" firstAttribute="top" secondItem="Znd-HL-HjS" secondAttribute="bottom" constant="32" id="m6E-Iy-RVJ"/>
-                            <constraint firstItem="ZaD-Bb-Y3a" firstAttribute="leading" secondItem="xhT-3Y-mLM" secondAttribute="leading" constant="186" id="mMv-c4-gZI"/>
+                            <constraint firstItem="YRE-M2-Nbm" firstAttribute="top" secondItem="ZaD-Bb-Y3a" secondAttribute="bottom" constant="35" id="dgy-uy-Rfs"/>
+                            <constraint firstItem="ZaD-Bb-Y3a" firstAttribute="top" secondItem="Znd-HL-HjS" secondAttribute="bottom" constant="30" id="m6E-Iy-RVJ"/>
+                            <constraint firstItem="ZaD-Bb-Y3a" firstAttribute="leading" secondItem="xhT-3Y-mLM" secondAttribute="leading" constant="110" id="mMv-c4-gZI"/>
                             <constraint firstItem="yuc-t5-Pve" firstAttribute="leading" secondItem="xhT-3Y-mLM" secondAttribute="leading" id="mz9-jI-UQT"/>
                             <constraint firstItem="yuc-t5-Pve" firstAttribute="top" secondItem="YRE-M2-Nbm" secondAttribute="bottom" constant="14" id="p6G-oG-82L"/>
                             <constraint firstItem="YRE-M2-Nbm" firstAttribute="centerX" secondItem="Znd-HL-HjS" secondAttribute="centerX" id="w0M-4Y-5Bu"/>
