--- a/Lab7/Lab7/Base.lproj/LaunchScreen.storyboard
+++ b/Lab7/Lab7/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,34 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="weed" translatesAutoresizingMaskIntoConstraints="NO" id="okE-sx-ibl">
+                                <rect key="frame" x="134" y="127" width="332" height="359"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Health Conditions for Medical Marijuana" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSb-1j-n0s">
+                                <rect key="frame" x="148" y="71" width="305" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in Colorado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3V-A2-KVY">
+                                <rect key="frame" x="256" y="100" width="88" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="okE-sx-ibl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5ZD-vy-hPx"/>
+                            <constraint firstItem="okE-sx-ibl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="6.5" id="DUv-VD-RbW"/>
+                            <constraint firstItem="okE-sx-ibl" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="114" id="Dzu-Wt-zZY"/>
+                            <constraint firstItem="HSb-1j-n0s" firstAttribute="centerX" secondItem="Y3V-A2-KVY" secondAttribute="centerX" id="FDc-TC-oat"/>
+                            <constraint firstItem="okE-sx-ibl" firstAttribute="top" secondItem="Y3V-A2-KVY" secondAttribute="bottom" constant="6" id="O3g-oo-jTY"/>
+                            <constraint firstItem="Y3V-A2-KVY" firstAttribute="top" secondItem="HSb-1j-n0s" secondAttribute="bottom" constant="8" symbolic="YES" id="VDF-Rm-UJs"/>
+                            <constraint firstItem="okE-sx-ibl" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="107" id="aPP-3g-rqY"/>
+                            <constraint firstItem="Y3V-A2-KVY" firstAttribute="centerX" secondItem="okE-sx-ibl" secondAttribute="centerX" id="pqD-9u-w9C"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +52,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="weed" width="2000" height="2133"/>
+    </resources>
 </document>
